--- a/views/admin/product/create.html
+++ b/views/admin/product/create.html
@@ -7,6 +7,7 @@
     <title>Create New Product</title>
 
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/product.css">
   </head>
   <body>
