ejs template with home page using layout

--- a/views/general/index.ejs
+++ b/views/general/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page not found</title>
+    <title><%= pageTitle %></title>
 
     <link rel="stylesheet" href="/css/main.css">
   </head>
@@ -23,7 +23,15 @@
     </header>
 
     <main>
-        <h1>Page not found.</h1>
+      <h1>Home</h1>
+
+      <h3>Products</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe tenetur
+        explicabo sapiente assumenda est dolor aspernatur totam deleniti?
+        Aliquam perferendis fugit itaque soluta, voluptates enim? Alias ex enim
+        corrupti nihil?
+      </p>
     </main>
   </body>
 </html>
