--- a/views/general/index.ejs
+++ b/views/general/index.ejs
@@ -1,37 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= pageTitle %></title>
+<%- include('../_partials/top.ejs') %>
 
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-header__nav">
-        <ul class="main-header__list">
-          <li class="main-header__item">
-            <a href="/" class="active">Home</a>
-          </li>
-          <li class="main-header__item">
-            <a href="/admin/products/create">Add Product</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+<main>
+  <div class="grid">
+  <% if(products.length > 0){ %>
+    <% for(let product of products){ %>
+    <article class="card product-item">
+      <header class="card__header">
+        <h1 class="product__title"><%= product.title %></h1>
+      </header>
+      <div class="card__image">
+        <img
+          src="https://img.freepik.com/free-vector/opened-book-with-empty-pages_1308-78627.jpg"
+          ,
+          alt=""
+          ,
+          width="100"
+        />
+      </div>
+      <div class="card__content">
+        <h2 class="product__price">$12.99</h2>
+        <p class="product__description">just for test</p>
+      </div>
+      <div class="card__actions">
+        <button class="btn">Add to cart</button>
+      </div>
+    </article>
+  </div>
+  <% } %> <% }else{ %>
+    <article class="no-product-found">
+      <h1>
+        <span>
+          No products available.
+        </span>
+      </h1>
+    </article>
+    <% } %>
+  </div>
+</main>
 
-    <main>
-      <h1>Home</h1>
-
-      <h3>Products</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe tenetur
-        explicabo sapiente assumenda est dolor aspernatur totam deleniti?
-        Aliquam perferendis fugit itaque soluta, voluptates enim? Alias ex enim
-        corrupti nihil?
-      </p>
-    </main>
-  </body>
-</html>
+<%- include('../_partials/bottom.ejs') %>
